<resources>
    <string name="app_name">RoboMarket</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">D8MjOxsJpDNPaLdBaxvRU6Afm1xMGF9TTY5TQArd</string>
    <string name="back4app_client_key">nsIb4C6VhYNDlIm2nFInFs71QlUEJDA6DyuyJ2nX</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_username">Username</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_genre">Genre</string>
    <string name="hint_click_image">Click on image to change it</string>
    <string name="hint_select_robot">Click on the Plus Button do add items</string>
    <string name="hint_address">Address</string>
    <string name="hint_model">Model</string>
    <string name="hint_color">Color</string>
    <string name="hint_year">Year</string>
    <string name="hint_price">Price</string>
    <string name="hint_manufacturer">Manufacturer</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="signin_button">Sign In</string>
    <string name="signup_button">Sign Up</string>
    <string name="register_button">Register</string>
    <string name="not_member">Not a member?</string>
    <string name="already_member">Already a member?</string>
    <string name="ok">Ok</string>
    <string name="required_field">Required Field</string>
    <string name="invalid_email_format">Invalid format</string>
    <string name="different_passwords">Passwords don\'t match</string>
    <string name="menu_sales">Sales</string>
    <string name="menu_robots">Robots</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_item_logout">Log Out</string>
    <string name="menu_item_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="menu_item_search">Search</string>
    <string name="item_field_model">Model:</string>
    <string name="error_stock_not_enough">There is no robots left in stock</string>
    <string name="no_robots_found">No robots found</string>
    <string name="edit_profile_activity">Edit Profile</string>
    <string name="item_field_quantity">Quantity:</string>
    <string name="item_field_price">Price:</string>
    <string name="button_save">Save</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_remove">Remove</string>
    <string name="button_delete">Delete</string>
    <string name="button_request_password">Request Password Reset</string>
    <string name="sucessful_reset_password">A reset link was sent for your e-mail.</string>
    <string name="select_robots_to_continue">Select at least one robot to continue</string>
</resources>
