<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.marcosvbras.robomarket.login.viewmodel.LoginViewModel" />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/gradient_background"
        android:layout_height="match_parent"
        tools:context=".login.ui.LoginActivity">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="176dp"
            android:background="@drawable/rounded_corner_layout"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:text="@={viewModel.username}"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"
                app:setError="@{viewModel.usernameFieldError}" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"
                app:setError="@{viewModel.passwordFieldError}" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:onClick="@{() -> viewModel.signIn()}"
            android:text="@string/signin_button"
            style="@style/ButtonWhiteDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/not_member"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            style="@style/ButtonWhiteDefault"
            android:onClick="@{() -> viewModel.register()}"
            android:text="@string/register_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>