<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.marcosvbras.robomarket.profile.viewmodel.EditProfileViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:fillViewport="false"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/top_toolbar"
                layout="@layout/partial_transparent_toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/white_rounded_corner_layout"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/hint_name"
                        android:text="@={viewModel.name}"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/colorAccent"
                        app:setError="@{viewModel.nameFieldError}" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address"
                        android:text="@={viewModel.address}"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/colorAccent" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone"
                        android:text="@={viewModel.phone}"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/colorAccent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_genre" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:entries="@array/genre_list"
                        android:onItemSelected="@{(parent, view, pos, id) -> viewModel.onGenreSelected(parent, view, pos, id)}" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/colorAccent"
                        app:setError="@{viewModel.emailFieldError}" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:text="@={viewModel.username}"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/colorAccent"
                        app:setError="@{viewModel.usernameFieldError}" />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/circular_image_view"
                    android:background="@drawable/circular_imageview_background"
                    android:layout_height="@dimen/circular_image_view"
                    android:layout_gravity="center_horizontal"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"
                    app:url_image="@{viewModel.avatarUrl}" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_mini"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="70dp"
                    android:clickable="true"
                    android:onClick="@{() -> viewModel.changeAvatarImg()}"
                    android:src="@drawable/ic_sync_white_36dp"
                    android:tint="@android:color/white"
                    app:fabSize="mini" />
            </FrameLayout>

            <Button
                android:id="@+id/button_save"
                style="@style/ButtonWhiteDefault"
                android:layout_width="0dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:onClick="@{() -> viewModel.save()}"
                android:text="@string/button_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
